--- a/Italian/main/DeskClock.apk/res/values-it/strings.xml
+++ b/Italian/main/DeskClock.apk/res/values-it/strings.xml
@@ -1,66 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="common_settings">Settings</string>    
+    <string name="common_settings">Impostazioni</string>    
     <string name="alarm_settings">Impostazioni sveglie</string>
-    <string name="vibrate_pref_summary">Vibrate when alarm sounds</string>
-    <string name="label_pref_summary">Label this alarm clock</string>
-    <string name="worldclock_title">Clock</string>
-    <string name="stopwatch_title">Stopwatch</string>
+    <string name="vibrate_pref_summary">"Vibra quando suona l'allarme"</string>
+    <string name="label_pref_summary">Dai un nome a questo allarme</string>
+    <string name="worldclock_title">Orologio</string>
+    <string name="stopwatch_title">Cronometro</string>
     <string name="timer_title">Timer</string>
     <string name="menu_add_worldclock">Aggiungi fuso orario</string>
-    <string name="menu_edit_systemtime">System time</string>
+    <string name="menu_edit_systemtime">Orario di sistema</string>
     <string name="menu_edit_timer_item">Edit timer task</string>
     <string name="delete_timer_item_title">Delete timer task</string>
     <string name="delete_selected_timer_item">Delete the selected timer task?</string>
     <string name="delete_timezone_title">Elimina fuso orario</string>
     <string name="delelte_selected_timezone">Eliminare il fuso orario selezionato?</string>
     <string name="timezone_exist_error_message">Questo fuso orario è già presente.</string>
-    <string name="alarm_disabled">Disabled</string>
-    <string name="alarm_ascending_mode_title">Ascending volume</string>
-    <string name="alarm_ascending_mode_summary">Alarm volume rises gradually</string>
-    <string name="close_alarm">Close alarm</string>
-    <string name="start">Start</string>
-    <string name="pause">Pause</string>
+    <string name="alarm_disabled">Disattivato</string>
+    <string name="alarm_ascending_mode_title">Volume crescente</string>
+    <string name="alarm_ascending_mode_summary">Il volume dell'allarme cresce progressivamente</string>
+    <string name="close_alarm">Chiudi allarme</string>
+    <string name="start">Avvia</string>
+    <string name="pause">Ferma</string>
     <string name="reset">Reset</string>
-    <string name="lap">Lap</string>
-    <string name="timer_continue">Continue</string>
+    <string name="lap">Giro</string>
+    <string name="timer_continue">Continua</string>
     <string name="worldclock_empty_text">Nessun orario internazionale</string>
-    <string name="alarmclock_empty_text">No alarms</string>
-    <string name="stopwatch_lap_empty_text">No laps</string>
+    <string name="alarmclock_empty_text">Nessun allarme</string>
+    <string name="stopwatch_lap_empty_text">Nessun giro</string>
     <string name="timer_got_it">OK</string>
-    <string name="timer_start_alarm">"Time's up!"</string>
-    <string name="dialog_confirm_abort">Discard changes?</string>
-    <string name="confirm_abort">Discard</string>
-    <string name="remind_ringtone">Ringtone</string>
-    <string name="keep_screen_on">Keep screen on</string>
-    <string name="vibrate_when_ringing">Vibrate when ringing</string>
-    <string name="start_up">Start</string>
-    <string name="cancel">Cancel</string>
-    <string name="timer_message_with_hour">%1$d hours and %2$d minutes</string>
-    <string name="timer_message">%1$d minutes</string>
-    <string name="timer_message_with_seconds">%1$d seconds</string>
+    <string name="timer_start_alarm">"Tempo scaduto !"</string>
+    <string name="dialog_confirm_abort">Annullare le modifiche?</string>
+    <string name="confirm_abort">Annulla</string>
+    <string name="remind_ringtone">suoneria</string>
+    <string name="keep_screen_on">Mantieni lo schermo attivo</string>
+    <string name="vibrate_when_ringing">Vibra quando suona</string>
+    <string name="start_up">Avvia</string>
+    <string name="cancel">Annulla</string>
+    <string name="timer_message_with_hour">%1$d ore e %2$d minuti</string>
+    <string name="timer_message">%1$d minuti</string>
+    <string name="timer_message_with_seconds">%1$d secondi</string>
     <string name="timer_item_picker_minute">Min</string>
     <string name="timer_item_picker_second">Sec</string>
     <string name="timer_item_duration_display">%1$d Min %2$d Sec</string>
-    <string name="timer_new_item">Customize</string>
-    <string name="timer_item_label_hint">Timer label</string>
+    <string name="timer_new_item">Personalizza</string>
+    <string name="timer_item_label_hint">Etichetta timer</string>
     <string name="shutdown_alarm_title">Shutdown alarm</string>
     <string name="shutdown_alarm_enable_summary">Shutdown alarm is on</string>
     <string name="shutdown_alarm_disable_summary">Shutdown alarm is off</string>
-    <string name="workday_alarm_clock">Sveglia giorni lavorativi</string>
+    <string name="workday_alarm_clock">Allarme solo giorni lavorativi</string>
     <string name="system_time_setting">Impostazioni orario</string>
-    <string name="lap_num">Lap</string>
-    <string name="hour_unit">Hr +</string>
+    <string name="lap_num">Giro</string>
+    <string name="hour_unit">Ore +</string>
     <string name="alarm_label_hint">Alarm label</string>
-    <string name="legal_workday_invalidate">Data expired (Alarm rings from Mon to Fri)</string>
-    <string name="legal_workday_invalidate_message">(Data expired. Update in Settings)</string>
-    <string name="legal_workday_message">" (Alarm off during holidays)"</string>
-    <string name="default_alarm_alert">Set default alarm sound</string>
-    <string name="default_alarm_title">Default ringtone</string>
-    <string name="alarm_alert">Default ringtone</string>
-    <string name="alarm_screen">Alarm screen and ringtone</string>
-    <string name="slider_text">Slide up to close</string>
-    <string name="snooze_message">Snooze for %d mins</string>
+    <string name="legal_workday_invalidate">Data passata (Allarme in vigore da Lun a Ven)</string>
+    <string name="legal_workday_invalidate_message">(Data passata. Aggiorna nelle Impostazioni)</string>
+    <string name="legal_workday_message">" (Allarme disattivato nei giorni festivi)"</string>
+    <string name="default_alarm_alert">Imposta suoneria predefinita</string>
+    <string name="default_alarm_title">Suoneria predefinita</string>
+    <string name="alarm_alert">Suoneria predefinita</string>
+    <string name="alarm_screen">Schermo allarme e suoneria</string>
+    <string name="slider_text">"Scorri verso l'alto per chiudere"</string>
+    <string name="snooze_message">Rimanda di %d min</string>
     <string name="full_wday_month_day_no_year">EEEEMMMMd</string>
     <string name="elapsed_time_format">+%s</string>    
     <string name="app_label">Orologio</string>
@@ -76,8 +76,8 @@
     <string name="alarm_repeat">Ripeti</string>
     <string name="alert">Suoneria allarme</string>
     <string name="time">Ora</string>
-    <string name="alarm_alert_alert_silenced">Alarm silenced after %d minutes.</string>
-    <string name="timer_alert_alert_silenced">Timer silenced after %d minutes.</string>
+    <string name="alarm_alert_alert_silenced">Allarme silenziato dopo %d minuti.</string>
+    <string name="timer_alert_alert_silenced">Timer silenziato dopo %d minuti.</string>
     <string name="alarm_alert_snooze_set">Rimanda di %d minuti.</string>
     <string name="day">1 giorno</string>
     <string name="days">%s giorni</string>
@@ -86,12 +86,12 @@
     <string name="minute">1 minuto</string>
     <string name="minutes">%s minuti</string>
     <string name="every_day">Ogni giorno</string>
-    <string name="legal_workday">Legal workday</string>
+    <string name="legal_workday">Giorni feriali</string>
     <string name="never">Mai</string>
     <string name="day_concat">", "</string>
     <string name="analog_gadget">Orologio analogico</string>
     <string name="settings">Impostazioni</string>
-    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>    
+    <string name="alarm_in_silent_mode_title">Allarme in modalita Silenzioso</string>    
     <string name="snooze_duration_title">Intervallo ripetizione allarme</string>
     <string name="auto_silence_title">Disattiva suoneria dopo</string>
     <string name="auto_silence_summary">%d minuti</string>
@@ -100,17 +100,17 @@
     <string name="revert">Annulla modifiche</string>
     <string name="delete">Elimina</string>
     <string name="alarm_volume_title">Volume allarme</string>
-    <string name="alarm_volume_summary">Set alarm volume</string>    
+    <string name="alarm_volume_summary">"Imposta il volumente dell'allarme"</string>    
     <string name="silent_alarm_summary">Silenzioso</string>
     <string name="alarm_notify_text">Ripeti o elimina allarme.</string>
     <string name="alarm_notify_snooze_label">%s (sospeso)</string>
-    <string name="snooze_confirm_cancel">Cancel snooze</string>    
+    <string name="snooze_confirm_cancel">Annulla allarme rimandato</string>    
     <string name="volume_button_setting_title">Pulsanti volume</string>
-    <string name="volume_button_setting_summary">"Set volume buttons' function during alarm"</string>    
+    <string name="volume_button_setting_summary">Imposta la funzionalità dei tasti volume durante un allarme</string>    
     <string name="battery_charging_level">%d%%</string>
-    <string name="menu_item_dock_settings">Dock settings</string>    
+    <string name="menu_item_dock_settings">Impostazioni Dock</string>    
     <string name="alarm_klaxon_service_desc">Servizio di riproduzione dei suoni per gli allarmi impostati in Orologio.</string>
-    <string name="loading_ringtone">Caricamento suoneria...</string>
+    <string name="loading_ringtone">Caricamento suoneria…</string>
     <string name="control_set_alarm">Imposta allarme</string>
     <string name="control_set_alarm_with_existing">%s</string>
 </resources>
