--- a/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
+++ b/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
@@ -3,12 +3,12 @@
     <string name="download_when_network_connected">Scarica utilizzando la rete dati mobile</string>
     <string name="download_paused">Download in pausa</string>
     <string name="download_pending">Download in attesa</string>
-    <string name="download_wait_connect">Download waiting to connect</string>
+    <string name="download_wait_connect">Download in attesa della connessione</string>
     <string name="download_info_start_deleted_tasks">Elimina i download</string>
     <string name="download_info_count_deleted_tasks">%s download rimossi</string>
     <string name="menu_preferences">Impostazioni</string>
-    <string name="menu_all_task_pause">Pause all</string>
-    <string name="menu_all_task_start">Start all</string>
+    <string name="menu_all_task_pause">Metti tutti in pausa</string>
+    <string name="menu_all_task_start">Avvia tutti</string>
     <string name="menu_enter_edit_mode">Editor</string>
     <string name="delete_downloads_records">Elimina download</string>
     <string name="pause_download">Pausa</string>
@@ -35,20 +35,20 @@
     <string name="download_in_process">In corso</string>
     <string name="download_complete">Scaricati</string>
     <string name="download_speed_null"></string>
-    <string name="download_list_get_free_vip">Xunlei trial</string>
-    <string name="download_list_get_hightspeed_flow_sucess_head">Xunlei trial session created</string>
-    <string name="download_list_get_hightspeed_flow_sucess_tail">Enjoy faster download speeds powered by Xunlei</string>
-    <string name="download_list_get_hightspeed_flow_pay_ok">Payment complete.</string>
-    <string name="download_list_get_hightspeed_flow_auto_open">Xunlei download acceleration is on</string>
-    <string name="turn_off_xunlei_tips">Xunlei download acceleration is off</string>
-    <string name="auth_activity_title">Xunlei account</string>
+    <string name="download_list_get_free_vip">Prova Xunlei</string>
+    <string name="download_list_get_hightspeed_flow_sucess_head">Sessione di prova Xunlei creata</string>
+    <string name="download_list_get_hightspeed_flow_sucess_tail">Goditi una maggiore velocità in download, powered by Xunlei</string>
+    <string name="download_list_get_hightspeed_flow_pay_ok">Pagamento completato.</string>
+    <string name="download_list_get_hightspeed_flow_auto_open">Accelerazione download Xunlei attivato</string>
+    <string name="turn_off_xunlei_tips">Accelerazione download Xunlei disattivato</string>
+    <string name="auth_activity_title">Account Xunlei</string>
     <string name="retry_after_network_available">Riprova quando ci sarà una rete disponibile.</string>
     <string name="editmode_menu_share">Condividi</string>
     <string name="editmode_menu_delete">Elimina</string>
     <string name="all_downloads">Tutti i download</string>
     <string name="app_downloads">%s download</string>
-    <string name="dialog_file_missing_title">Fail to open file</string>
-    <string name="paused_insufficient_space">Waiting for sufficient space</string>
+    <string name="dialog_file_missing_title">Impossibile aprire il file</string>
+    <string name="paused_insufficient_space">In attesa di avere spazio sufficiente</string>
     <string name="all_fileter">TUTTI</string>
     <string name="apk_filter">APK</string>
     <string name="media_filter">MEDIA</string>
@@ -57,75 +57,75 @@
     <string name="other_filter">ALTRO</string>
     <string name="xunlei_brand">Powered by Xunlei</string>
     <string name="xunlei_brand_url">http://mobile.xunlei.com</string>
-    <string name="xunlei_switch">Xunlei download engine</string>
-    <string name="turn_off_xunlei_title">Disable Xunlei download engine</string>
-    <string name="turn_off_xunlei_message">You may experience slower download speeds.</string>
+    <string name="xunlei_switch">Motore di download Xunlei</string>
+    <string name="turn_off_xunlei_title">Disabilita il motore di download Xunlei</string>
+    <string name="turn_off_xunlei_message">Potresti riscontrare una minore velocità in download.</string>
     <string name="vip_auto_speedup">Xunlei members to accelerate directly</string>
-    <string name="xunlei_gaosu">Xunlei Highspeed service</string>
-    <string name="free_speedup_exp">Free Xunlei Highspeed service</string>
-    <string name="valid_in_this_month">only valid in this month</string>
-    <string name="xunlei_speed_service">Xunlei speed up service</string>
-    <string name="open_xunlei_speed_service">Start Xunlei Highspeed service</string>
-    <string name="bind_xunlei_account">bind xunlei account ></string>
-    <string name="choose_open_time">Please select the opening time</string>
+    <string name="xunlei_gaosu">Servizio Xunlei Highspeed</string>
+    <string name="free_speedup_exp">Servizio gratuito Xunlei Highspeed</string>
+    <string name="valid_in_this_month">valido solamente questo mese</string>
+    <string name="xunlei_speed_service">Servizio di accelerazione Xunlei</string>
+    <string name="open_xunlei_speed_service">Avvia il servizio Xunlei Highspeed</string>
+    <string name="bind_xunlei_account">Associa un account Xunlei</string>
+    <string name="choose_open_time">"Prego selezionare l'orario di apertura"</string>
     <string name="experience_xunlei_account_speed">Xunlei members to accelerate service experience</string>
-    <string name="high_speed_channel">Highspeed channel</string>
-    <string name="free_high_speed_channel">Free Highspeed channel</string>
-    <string name="dredge_xunlei_account">Opening of the Xunlei member</string>
-    <string name="immediately_a_renewal">Immediately a renewal</string>
-    <string name="period_of_validity">Validity:</string>
-    <string name="determine">Confirm</string>
-    <string name="cancle">Cancle</string>
-    <string name="one_month">One month</string>
+    <string name="high_speed_channel">Canale Highspeed</string>
+    <string name="free_high_speed_channel">Canale gratuito Highspeed</string>
+    <string name="dredge_xunlei_account">Apertura del membro Xunlei</string>
+    <string name="immediately_a_renewal">Immediatamente un rinnovo</string>
+    <string name="period_of_validity">Validità:</string>
+    <string name="determine">Conferma</string>
+    <string name="cancle">Annulla</string>
+    <string name="one_month">Un mese</string>
     <string name="mi_money">Mi money</string>
-    <string name="member_cost">Account annual fee</string>
+    <string name="member_cost">Canone annuo account</string>
     <string name="original_price">(Original_price</string>
     <string name="mi_money_">mi_money)</string>
-    <string name="xunlei_member_one_month">Xunlei member for one month(platinum)</string>
-    <string name="xunlei_member_annual_fee">Xunlei member for one year(platinum)</string>
-    <string name="disable">Disable</string>
-    <string name="Only_the_wifi">Only effective under the wifi</string>
-    <string name="all_the_internet">All network</string>
-    <string name="get_order_fail_msg">Get Order Fail</string>
-    <string name="get_order_dialog_msg">Getting Order Info</string>
-    <string name="get_account_dialog_msg">Getting Account Info</string>
-    <string name="download_list_open_xl_title">Open xunlei download engine</string>
-    <string name="download_list_open_xl_message">Open xunlei download engine，Unlimited high-speed download service immediately。</string>
-    <string name="download_list_open_xl_ok">Determine</string>
-    <string name="download_list_open_xl_cancel">Cancle</string>
-    <string name="download_list_intoAuth">Are entering miui authorization page</string>
-    <string name="download_list_intoAuthAlert">Please wait</string>
-    <string name="app_label">Downloads</string>
-    <string name="download_title">Downloads</string>
-    <string name="download_title_sorted_by_date">Downloads - Sorted by date</string>
-    <string name="download_title_sorted_by_size">Downloads - Sorted by size</string>
-    <string name="no_downloads">No downloads</string>
-    <string name="missing_title">Unknown</string>
-    <string name="button_sort_by_size">Sort by size</string>
-    <string name="button_sort_by_date">Sort by date</string>
-    <string name="download_queued">Queued</string>
-    <string name="download_running">In progress</string>
-    <string name="download_success">Complete</string>
-    <string name="download_error">Failed</string>
-    <string name="download_error_insufficient_space">Insufficient space</string>
-    <string name="dialog_title_not_available">Download Failed</string>
-    <string name="dialog_failed_body">Do you want to retry downloading the file later or delete it from the queue?</string>
-    <string name="dialog_title_queued_body">File not yet available</string>
-    <string name="dialog_queued_body">This file is queued for future download.</string>
-    <string name="dialog_file_missing_body">The downloaded file cannot be found.</string>
-    <string name="dialog_insufficient_space_on_external">Cannot finish download. There is not enough space on external storage.</string>
-    <string name="dialog_insufficient_space_on_cache">Cannot finish download. There is not enough space on internal download storage.</string>
-    <string name="dialog_cannot_resume">Download interrupted. It cannot be resumed.</string>
-    <string name="dialog_file_already_exists">Cannot download. The destination file already exists.</string>
-    <string name="dialog_media_not_found">Cannot download. The external media is not available.</string>
-    <string name="download_no_application_title">Cannot open file</string>
-    <string name="remove_download">Remove</string>
-    <string name="delete_download">Delete</string>
-    <string name="keep_queued_download">Keep</string>
-    <string name="cancel_running_download">Cancel</string>
-    <string name="retry_download">Retry</string>
-    <string name="deselect_all">Deselect All</string>
-    <string name="select_all">Select All</string>
-    <string name="selected_count">Selected %1$d out of %2$d</string>
-    <string name="download_share_dialog">Share via</string>
+    <string name="xunlei_member_one_month">Membro Xunlei per un mese (platino)</string>
+    <string name="xunlei_member_annual_fee">Membro Xunlei per un anno (platino)</string>
+    <string name="disable">Disattiva</string>
+    <string name="Only_the_wifi">Effettivo solo con il Wi-Fi</string>
+    <string name="all_the_internet">Tutta la rete</string>
+    <string name="get_order_fail_msg">Recupero ordine fallito</string>
+    <string name="get_order_dialog_msg">"Recupero info sull'ordine"</string>
+    <string name="get_account_dialog_msg">"Recupero info sull'account"</string>
+    <string name="download_list_open_xl_title">Apri il motore di download Xunlei</string>
+    <string name="download_list_open_xl_message">Apri il motore di download Xunlei，servizio di accelerazione download,  immediatamente.</string>
+    <string name="download_list_open_xl_ok">Ok</string>
+    <string name="download_list_open_xl_cancel">Annulla</string>
+    <string name="download_list_intoAuth">Accesso alla pagina di autorizzazione MIUI</string>
+    <string name="download_list_intoAuthAlert">Attendere</string>
+    <string name="app_label">Download</string>
+    <string name="download_title">Download</string>
+    <string name="download_title_sorted_by_date">Download - Ordinati per data</string>
+    <string name="download_title_sorted_by_size">Download - Ordinati per dimesione</string>
+    <string name="no_downloads">Nessun download</string>
+    <string name="missing_title">Sconosciuto</string>
+    <string name="button_sort_by_size">Ordina per dimensione</string>
+    <string name="button_sort_by_date">Ordina per data</string>
+    <string name="download_queued">Accodati</string>
+    <string name="download_running">In corso</string>
+    <string name="download_success">Completati</string>
+    <string name="download_error">Falliti</string>
+    <string name="download_error_insufficient_space">Spazio insufficiente</string>
+    <string name="dialog_title_not_available">Download fallito</string>
+    <string name="dialog_failed_body">Desideri riprovare a scaricare il file più tardi o vuoi rimuoverlo dalla coda?</string>
+    <string name="dialog_title_queued_body">File not ancora disponibile</string>
+    <string name="dialog_queued_body">Questo file è accodato per essere scaricato in futuro.</string>
+    <string name="dialog_file_missing_body">Impossibile trovare il file scaricato.</string>
+    <string name="dialog_insufficient_space_on_external">"Imposibile terminare il download. Non c'è abbastanza spazio sulla memoria esterna."</string>
+    <string name="dialog_insufficient_space_on_cache">"Imposibile terminare il download. Non c'è abbastanza spazio sulla memoria interna."</string>
+    <string name="dialog_cannot_resume">Download interrotto. Impossibile riprendere.</string>
+    <string name="dialog_file_already_exists">Impossibile scaricare. Il file di destinazione esiste già.</string>
+    <string name="dialog_media_not_found">Impossibile scaricare. Il supporto esterno non è disponibile.</string>
+    <string name="download_no_application_title">Impossibile aprire il file</string>
+    <string name="remove_download">Rimuovi</string>
+    <string name="delete_download">Cancella</string>
+    <string name="keep_queued_download">Mantieni</string>
+    <string name="cancel_running_download">Annulla</string>
+    <string name="retry_download">Riprova</string>
+    <string name="deselect_all">Deseleziona tutti</string>
+    <string name="select_all">Seleziona tutti</string>
+    <string name="selected_count">Selezionati %1$d di %2$d</string>
+    <string name="download_share_dialog">Condividi con</string>
 </resources>
