Browser.apk strings.xml - 2

--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -309,102 +309,102 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="common_use_phrase_bottom_bar_net_txt">.net</string>
     <string name="common_use_phrase_bottom_bar_org_txt">.org</string>
     <string name="common_use_phrase_bottom_bar_paste_txt">Incolla</string>
-    <string name="pref_accessibility_url_shortcut_enter_title">Quick URL input</string>
-    <string name="pref_accessibility_url_shortcut_enter_summary">Common letter combinations can be entered in one press in the address bar</string>
-    <string name="common_use_phrase_bottom_bar_paste_analytic_txt">Paste</string>
-    <string name="common_use_phrase_bottom_bar_up_analytic_txt">Expand</string>
-    <string name="common_use_phrase_bottom_bar_down_analytic_txt">Collapse</string>
-    <string name="download_default_path_txt">Remember this choice</string>
-    <string name="pref_file_download_save_title">Downloads</string>
-    <string name="pref_file_downlaod_save_reset_default_settings">Restore default settings</string>
-    <string name="pref_file_downlaod_save_is_reset_default_settings">Restore default settings</string>
-    <string name="pref_file_download_save_modify_default_path">Downloads file path</string>
-    <string name="download_dialog_file_length_hint_txt">File size:</string>
-    <string name="download_dialog_file_length_nolength_txt">Downloading…</string>
-    <string name="download_dialog_file_length_nolength_error_txt">"Couldn't download"</string>
-    <string name="download_dialog_file_length_lessthan1kb">less than 1K</string>
-    <string name="download_dialog_default_path_invalid">Download path is invalid. Will use default download path instead.</string>
-    <string name="modify_download_path_no_sdcard_dlg_msg">USB storage is required to modify this path</string>
+    <string name="pref_accessibility_url_shortcut_enter_title">Immissione rapida URL</string>
+    <string name="pref_accessibility_url_shortcut_enter_summary">Combinazioni comuni di lettere possono essere inserite in un colpo solo nella barra degli indirizzi</string>
+    <string name="common_use_phrase_bottom_bar_paste_analytic_txt">Incolla</string>
+    <string name="common_use_phrase_bottom_bar_up_analytic_txt">Espandi</string>
+    <string name="common_use_phrase_bottom_bar_down_analytic_txt">Comprimi</string>
+    <string name="download_default_path_txt">Ricorda la mia scelta</string>
+    <string name="pref_file_download_save_title">Download</string>
+    <string name="pref_file_downlaod_save_reset_default_settings">Ripristina impostazioni predefinite</string>
+    <string name="pref_file_downlaod_save_is_reset_default_settings">Ripristina impostazioni predefinite</string>
+    <string name="pref_file_download_save_modify_default_path">Percorso file scaricati</string>
+    <string name="download_dialog_file_length_hint_txt">Dimensione:</string>
+    <string name="download_dialog_file_length_nolength_txt">In download…</string>
+    <string name="download_dialog_file_length_nolength_error_txt">Impossibile scaricare</string>
+    <string name="download_dialog_file_length_lessthan1kb">Meno di 1K</string>
+    <string name="download_dialog_default_path_invalid">Il percorso per i download non è valido. Verrà usato invece il percorso predefinito per i file scaricati.</string>
+    <string name="modify_download_path_no_sdcard_dlg_msg">La memoria USB è richiesta per modificare questo percorso</string>
     <string name="geolocation_permissions_prompt_toast_disallowed">Questo sito non può accedere alla tua posizione. Modifica questa impostazione nella schermata Impostazioni > Avanzate > Sito web.</string>
     <string name="pref_content_homepage">Imposta pagina iniziale</string>
-   <string name="bottom_bar_tabs_long_click_up_tip_txt">Swipe up to close</string>
-    <string name="bottom_bar_tabs_long_click_down_tip_txt">Swipe down to close</string>
-    <string name="bottom_bar_tabs_long_click_last_tab_tip_txt">This is the last tab</string>
-    <string name="network_show_wifi_setting_tip_dialog_setting_cate_title">WLAN notifications</string>
-    <string name="network_show_wifi_setting_tip_dialog_setting_title">"If you're using your mobile data connection, MIUI will notify you when a nearby WLAN network is available"</string>
-    <string name="network_show_wifi_setting_tip_dialog_title">Open WLAN network available</string>
-    <string name="network_show_wifi_setting_tip_dialog_description">Connect to this network</string>
-    <string name="dont_remind_again">Remember my choice</string>
-    <string name="use_cellular_network_alert_title">Data usage</string>
-    <string name="use_cellular_network_alert_message">"WLAN isn't available. Use your mobile data connection instead?"</string>
+    <string name="bottom_bar_tabs_long_click_up_tip_txt">"Scorri verso l'alto per chiudere"</string>
+    <string name="bottom_bar_tabs_long_click_down_tip_txt">Scorri verso il basso per chiudere</string>
+    <string name="bottom_bar_tabs_long_click_last_tab_tip_txt">"Questa è l'ultima scheda"</string>
+    <string name="network_show_wifi_setting_tip_dialog_setting_cate_title">Notifiche Wi-Fi</string>
+    <string name="network_show_wifi_setting_tip_dialog_setting_title">Se stai usando la tua connessione dati mobile, MIUI ti notificherà quando nelle vicinanze è disponibile una rete Wi-Fi</string>
+    <string name="network_show_wifi_setting_tip_dialog_title">Reti Wi-Fi aperta disponibile</string>
+    <string name="network_show_wifi_setting_tip_dialog_description">Connetti a questa rete</string>
+    <string name="dont_remind_again">Ricorda la mia scelta</string>
+    <string name="use_cellular_network_alert_title">Utilizzo dati</string>
+    <string name="use_cellular_network_alert_message">Wi-Fi non disponibile. Desideri usare la connessione dati mobile?</string>
     <string name="user_defined_webpage">Aggiungi alla pagina iniziale</string>
     <string name="quicklink_user_define_webpage_title">Nome</string>
     <string name="quicklink_user_define_webpage_url">URL</string>
     <string name="user_defined_webpage_title">Aggiungi alla pagina iniziale</string>
     <string name="quicklinks_most_visited">Aggiungi i siti più visitati alla pagina iniziale</string>
     <string name="quicklinks_most_visited_title">Aggiungi alla pagina iniziale</string>
-    <string name="quicklinks_most_visited_subtitle">Show recently visited sites in new tab</string>
-    <string name="quicklinks_group_default_subtitle">Empty</string>   
+    <string name="quicklinks_most_visited_subtitle">Mostra i siti visitati di recente in una nuova scheda</string>
+    <string name="quicklinks_group_default_subtitle">Nessuno</string>   
     <string name="add_quicklink_to_popular">Aggiungi alla pagina iniziale</string>
     <string name="quicklink_saved_before">Sito aggiunto alla pagina iniziale</string>
-    <string name="add_to_quicklink">Add to start page</string>    
+    <string name="add_to_quicklink">Aggiungi alla pagina iniziale</string>    
     <string name="add_to_bookmark">Aggiungi ai segnalibri</string>
-    <string name="edit_quicklink">Edit</string>
-    <string name="quicklink_saved">Added to start page</string>
-    <string name="quicklink_not_saved">"Couldn't add to start page"</string>
+    <string name="edit_quicklink">Modifica</string>
+    <string name="quicklink_saved">Aggiunto alla pagina iniziale</string>
+    <string name="quicklink_not_saved">Impossibile aggiungerlo alla pagina iniziale</string>
     <string name="add_quicklinks">Aggiungi</string>
-    <string name="add_ql_bm_title">Save</string>
-    <string name="save_image_success">Image saved</string>
-    <string name="save_image_failed">"Couldn't save image"</string>
-    <string name="pref_version_summary">Version:%s</string>
-    <string name="pref_category_title_version">Version</string>
-    <string name="js_disable_confirm_title">Disable JavaScript?</string>
-    <string name="js_disable_confirm_message">Disabling JavaScript may cause some websites to display incorrectly</string>
-    <string name="action_menu_text_bookmark">Add bookmark</string>
-    <string name="action_menu_text_share">Share</string>
-    <string name="action_menu_text_history">Bookmarks/History</string>
-    <string name="action_menu_text_nightmode">Night mode</string>
-    <string name="action_menu_text_nightmode_on">Night mode</string>
-    <string name="action_menu_text_nightmode_off">Night mode</string>
-    <string name="action_menu_text_exit">Exit</string>
-    <string name="action_menu_text_setting">Settings</string>
-    <string name="url_suggest_indicator_hoturl">Popular</string>
-    <string name="url_suggest_indicator_bookmark">Bookmarks/History</string>
-    <string name="url_suggest_indicator_mostvisited">Most visited</string>
-    <string name="v5_select_all">Select all</string>
-    <string name="v5_deselect_all">Deselect all</string>
-    <string name="v5_edit_mode_title_empty">0 selected</string>
-    <string name="error_title">"Couldn't sync"</string>
-    <string name="error_unauthorized">Sync has been disabled due to too many sign-in attempts.</string>
-    <string name="error_forbidden">Sync has been disabled due to problems with your Mi Account.</string>
-    <string name="error_not_acceptable">Sync has been disabled.</string>
+    <string name="add_ql_bm_title">Salva</string>
+    <string name="save_image_success">Immagine salvata</string>
+    <string name="save_image_failed">"Impossibile salvare l'immagine"</string>
+    <string name="pref_version_summary">Versione:%s</string>
+    <string name="pref_category_title_version">Versione</string>
+    <string name="js_disable_confirm_title">Disattivare JavaScript?</string>
+    <string name="js_disable_confirm_message">Disattivando JavaScript alcuni siti web potrebbero non essere visualizzati correttamente</string>
+    <string name="action_menu_text_bookmark">Aggiungo segnalibro</string>
+    <string name="action_menu_text_share">Condividi</string>
+    <string name="action_menu_text_history">Segnalibri/Cronologia</string>
+    <string name="action_menu_text_nightmode">Modalità Notte</string>
+    <string name="action_menu_text_nightmode_on">Modalità Notte</string>
+    <string name="action_menu_text_nightmode_off">Modalità Notte</string>
+    <string name="action_menu_text_exit">Esci</string>
+    <string name="action_menu_text_setting">Impostazioni</string>
+    <string name="url_suggest_indicator_hoturl">Popolare</string>
+    <string name="url_suggest_indicator_bookmark">Segnalibri/Cronologia</string>
+    <string name="url_suggest_indicator_mostvisited">Più visitati</string>
+    <string name="v5_select_all">Seleziona tutti</string>
+    <string name="v5_deselect_all">Deseleziona tutti</string>
+    <string name="v5_edit_mode_title_empty">0 selezionati</string>
+    <string name="error_title">Impossibile sincronizzare</string>
+    <string name="error_unauthorized">Sincronizzazione disattivata a causa di un numero eccessivo di tentativi di accesso.</string>
+    <string name="error_forbidden">Sincronizzazione disattivata a causa di un problema con il tuo account Mi.</string>
+    <string name="error_not_acceptable">Sincronizzazione disattivata.</string>
     <string name="tab_videopage">Video</string>
-    <string name="voice_title">Speak your command…</string>
-    <string name="voice_sub_title">"Don't know what to say? Try Open mi.com!"</string>
-    <string name="voice_title_please">Begin speaking…</string>
-    <string name="voice_title_distinguish">Processing…</string>
-    <string name="voice_title_listening">Listening…</string>
-    <string name="voice_title_speech_again">"Couldn't understand you"</string>
-    <string name="cloud_tab">Cloud tabs</string>
+    <string name="voice_title">Pronuncia il tuo comando…</string>
+    <string name="voice_sub_title">"Non sai cosa dire? Prova Apri mi.com!"</string>
+    <string name="voice_title_please">Inizia a parlare…</string>
+    <string name="voice_title_distinguish">Elaborazione…</string>
+    <string name="voice_title_listening">In ascolto…</string>
+    <string name="voice_title_speech_again">Non riesco a comprenderti</string>
+    <string name="cloud_tab">Chiudi schede</string>
     <string name="sync_item_browser_title">Sincronizzazione browser</string>
     <string name="sync_item_browser_summary">"Sincronizza i dati sul tuo Cloud e rendi più semplice l'utilizzo del browser su dispositivi diversi."</string>
     <string name="sub_sync_item_browser_title_bookmark">Sincronizza segnalibri</string>
-    <string name="sub_sync_item_browser_title_bookmark_summary">SIncronizza i segnalibri del browser</string>
+    <string name="sub_sync_item_browser_title_bookmark_summary">Sincronizza i segnalibri del browser</string>
     <string name="sub_sync_item_browser_title_history">Cronologia di sincronizzazione</string>
     <string name="sub_sync_item_browser_title_history_summary">Cronologia di sincronizzazione del browser</string>
-    <string name="sub_sync_item_browser_title_novel">Sync novels</string>
-    <string name="sub_sync_item_browser_title_novel_summary">Sync novels from browser</string>  
+    <string name="sub_sync_item_browser_title_novel">Sincronizza storie</string>
+    <string name="sub_sync_item_browser_title_novel_summary">Sincronizza storia del browser</string>  
     <string name="sub_sync_item_browser_title_cloud_tab">Sincronizza schede</string>
-    <string name="sub_sync_item_browser_title_cloud_tab_summary">SIncronizza le schede aperte su dispositivi diversi</string>
-    <string name="sub_sync_item_browser_title_webapp">Sync webapps</string>
-    <string name="sub_sync_item_browser_title_webapp_summary">Sync added webapps and favorites</string>
+    <string name="sub_sync_item_browser_title_cloud_tab_summary">Sincronizza le schede aperte su dispositivi diversi</string>
+    <string name="sub_sync_item_browser_title_webapp">Sincronizza webapp</string>
+    <string name="sub_sync_item_browser_title_webapp_summary">Sincronizza webapp aggiunte e preferiti</string>
     <string name="loading_tips">Trascina in basso per aggiornare</string>
     <string name="up_to_loading_tips">Rilascia per aggiornare</string>
     <string name="cloud_loading_tips">Trascina in basso per sincronizzare</string>
     <string name="cloud_up_to_loading_tips">Rilascia per sincronizzare</string>
     <string name="cloud_time_tips">Ultima sincronizzazione</string>
     <string name="cloud_no_new_data_toast">Nessun nuovo dato, riprovare più tardi</string>
-    <string name="cloud_sync_failed_toast">"Couldn't update"</string>
+    <string name="cloud_sync_failed_toast">Impossibile aggiornare</string>
     <string name="cloud_sync_closed_toast">"Can't update because sync is disabled"</string>
     <string name="close_cloud_tab_tip">Close cloud tabs on %s?</string>
     <string name="enter_incongnito_mode">Enter incognito mode</string>
