--- a/Italian/main/Contacts.apk/res/values-it/strings.xml
+++ b/Italian/main/Contacts.apk/res/values-it/strings.xml
@@ -1080,7 +1080,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="call_record_setting_miui">Impostazioni registrazione</string>
     <string name="accessibility_calllog_detail">Dettagli registro chiamate</string>
     <string name="select_groups">Seleziona gruppi</string>
-    <string name="sim_capacity_content">Capacità totale %d | %d usata</string>
+    <string name="sim_capacity_content" formatted="false">Capacità totale %d | %d usata</string>
     <string name="sim_error_generic_failure">Si è verificato un errore</string>
     <string name="sim_error_storage_full">Memoria piena</string>
     <string name="sim_error_text_too_long">Nome troppo lungo</string>
