--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -405,84 +405,84 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="cloud_time_tips">Ultima sincronizzazione</string>
     <string name="cloud_no_new_data_toast">Nessun nuovo dato, riprovare più tardi</string>
     <string name="cloud_sync_failed_toast">Impossibile aggiornare</string>
-    <string name="cloud_sync_closed_toast">"Can't update because sync is disabled"</string>
-    <string name="close_cloud_tab_tip">Close cloud tabs on %s?</string>
-    <string name="enter_incongnito_mode">Enter incognito mode</string>
-    <string name="pref_volume_key_action">Volume buttons: Previous/Next page</string>
-    <string name="pref_other_title">Other</string>
-    <string name="pref_clear_data_title">Clear data</string>
-    <string name="pref_clear_all_data_title">Clear all</string>
-    <string name="pref_clear_all_data_dlg">Delete all saved data above?</string>
-    <string name="pref_content_cloud_speedup">Load content faster using proxy servers</string>
-    <string name="adjust_text_zoom_toast">Changing text zoom may cause some websites to display incorrectly</string>
-    <string name="pref_file_download_default_path_prefix">Default path: %s</string>
-    <string name="miui_autologin_bar_title">Use system account to sign in</string>
+    <string name="cloud_sync_closed_toast">Impossibile aggiornare perchè la sincronizzazine è disattivata</string>
+    <string name="close_cloud_tab_tip">Chiudere la scheda cloud su %s?</string>
+    <string name="enter_incongnito_mode">Entra in modalità incognito</string>
+    <string name="pref_volume_key_action">Tasti volume: pagina precedente/successiva</string>
+    <string name="pref_other_title">Altro</string>
+    <string name="pref_clear_data_title">Azzera dati</string>
+    <string name="pref_clear_all_data_title">Azzera tutto</string>
+    <string name="pref_clear_all_data_dlg">Cancellare tutti i dati salvati qui sopra?</string>
+    <string name="pref_content_cloud_speedup">Carica contenuti più velocemente usando un server proxy</string>
+    <string name="adjust_text_zoom_toast">Cambiare lo zoom del testo può provocare problemi alla visualizzazione di alcuni siti</string>
+    <string name="pref_file_download_default_path_prefix">Percorso predefinito: %s</string>
+    <string name="miui_autologin_bar_title">Usa account di sistema per accedere</string>
     <string name="account_prifix">Account:</string>
-    <string name="miui_autologin_bar_error">"Can't sign in"</string>
-    <string name="add_bookmark_group">Add group</string>
-    <string name="new_folder_name_lable">Group name</string>
-    <string name="bookmark_rename_group">Rename group</string>
-    <string name="remove_bookmark_group">Delete group</string>
-    <string name="delete_bookmark_group_warning">Delete \"%s\"? All bookmarks in this group will be deleted.</string>
-    <string name="bookmark_title_lable">Title</string>
+    <string name="miui_autologin_bar_error">Impossibile accedere</string>
+    <string name="add_bookmark_group">Aggiungi gruppo</string>
+    <string name="new_folder_name_lable">Nome del gruppo</string>
+    <string name="bookmark_rename_group">Rinomina gruppo</string>
+    <string name="remove_bookmark_group">Cancella gruppo</string>
+    <string name="delete_bookmark_group_warning">Cancellare \"%s\"? Verranno cancellati tutti i segnalibri in questo gruppo.</string>
+    <string name="bookmark_title_lable">Titolo</string>
     <string name="bookmark_url_lable">URL</string>
-    <string name="bookmark_group_lable">Group</string>
-    <string name="root_folder_lable">None</string>
-    <string name="bookmark_URL_already_exisit">"You've already bookmarked this URL"</string>
-    <string name="add_new_quicklink">Add quicklink</string>
-    <string name="url_opened_in_background">Open in background tab</string>
+    <string name="bookmark_group_lable">Gruppo</string>
+    <string name="root_folder_lable">Nessuno</string>
+    <string name="bookmark_URL_already_exisit">Hai già questo URL nei segnalibri</string>
+    <string name="add_new_quicklink">Aggiungi link rapido</string>
+    <string name="url_opened_in_background">Apri in una scheda in background</string>
     <string name="pref_adblock_title">Ad blocker</string>
-    <string name="pref_enable_adblock_notification">Ad blocker notifications</string>
-    <string name="pref_clear_adblock_statistics">Clear Ad blocker history</string>
-    <string name="pref_adblock_counts">%d blocked</string>
-    <string name="pref_clear_adblock_statistics_dlg">Clear blocked ad count?</string>
-    <string name="adblock_notification">%d ads blocked</string>
-    <string name="share_page_text">"I'm enjoying 【%1$s】 | %2$s"</string>
-    <string name="qr_code_title">QR Code</string>
-    <string name="save_to_camera">Save to camera</string>
-    <string name="copy_url">Copy URL</string>
-    <string name="create_qr_code">QR code</string>
-    <string name="save_to_camera_success">Saved to camera</string>
-    <string name="save_to_camera_failed">"Can't save picture"</string>
-    <string name="sdcard_error">Check your SD card</string>
-    <string name="download_phone_tip">Phone</string>
-    <string name="download_router_tip">Download to Mi Router</string>
-    <string name="router_download_success">Download complete</string>
-    <string name="router_download_failed">Download failed</string>
-    <string name="router_download_exist">This download file already exists</string>
-    <string name="select_download_device">Choose device</string>
-    <string name="pref_video_preload_title">Preload videos</string>
-    <string name="pref_video_preload_dialogtitle">Video preloading</string>
+    <string name="pref_enable_adblock_notification">Notifiche Ad blocker</string>
+    <string name="pref_clear_adblock_statistics">Svuota cronologia Ad blocker</string>
+    <string name="pref_adblock_counts">%d bloccati</string>
+    <string name="pref_clear_adblock_statistics_dlg">Azzerare il conteggio pubblicità bloccate?</string>
+    <string name="adblock_notification">%d pubblicità bloccate</string>
+    <string name="share_page_text">"Mi sto godendo 【%1$s】 | %2$s"</string>
+    <string name="qr_code_title">Codice QR</string>
+    <string name="save_to_camera">Salva in Fotocamera</string>
+    <string name="copy_url">Copia URL</string>
+    <string name="create_qr_code">Codice QR</string>
+    <string name="save_to_camera_success">Salvato in Fotocamera</string>
+    <string name="save_to_camera_failed">"Impossibile salvare l'immagine"</string>
+    <string name="sdcard_error">Verifica la tua scheda SD</string>
+    <string name="download_phone_tip">Telefono</string>
+    <string name="download_router_tip">Scarica su Mi Router</string>
+    <string name="router_download_success">Download completato</string>
+    <string name="router_download_failed">Download fallito</string>
+    <string name="router_download_exist">Questo file scaricato esiste già</string>
+    <string name="select_download_device">Scegli dispositivo</string>
+    <string name="pref_video_preload_title">Precarica video</string>
+    <string name="pref_video_preload_dialogtitle">Video in precaricamento</string>
     <string name="bookmark_needs_url">Il segnalibro deve avere una posizione.</string>
     <string name="tab_history">Cronologia</string>
-    <string name="create_shortcut_bookmark">Aggiungi scorciatoia a Home</string>
+    <string name="create_shortcut_bookmark">Aggiungi scorciatoia nella Home</string>
     <string name="pref_text_zoom">Ridimensionamento testo</string>
     <string name="pref_zoom_on_double_tap">Zoom con doppio tocco</string>
     <string name="pref_min_font_size">Dimensioni minime caratteri</string>
     <string name="pref_inverted_summary">Il nero diventa bianco e viceversa</string>
     <string name="pref_privacy_clear_passwords_summary">Cancella tutte le password salvate</string>
     <string name="webapp_app_name">Light Web Apps Store</string>
-    <string name="webapp_dialog_title">Add app to Home screen</string>
-    <string name="webapp_add_to_desktop">Add this app to your Home screen?</string>
-    <string name="webapp_addtodeskpop_append">Added</string>
-    <string name="webapp_add_to_favorite_toast">Added to favorites</string>
-    <string name="webapp_webapp_favortes_title">Favorites</string>
-    <string name="dialog_geolocation_reject">Deny</string>
-    <string name="dialog_geolocation_share">Allow</string>
-    <string name="webapp_menu_addtodesk">Add to Home screen</string>
-    <string name="webapp_menu_already_addtodesk">Added to Home screen</string>
-    <string name="webapp_menu_share">Share</string>
-    <string name="webapp_menu_settings">Settings</string>
-    <string name="webapp_menu_nightmode">Night mode</string>
-    <string name="webapp_menu_favorites">Favorites</string>
-    <string name="webapp_menu_exit">Exit</string>
-    <string name="webapp_settings_title">Settings</string>
-    <string name="pref_webapp_settings_fontsize">Font size</string>
-    <string name="pref_webapp_settings_savewidth">"Don't use 2G/3G data connection to download images"</string>
-    <string name="pref_webapp_settings_hidebottombar">Hide bottom bar</string>
+    <string name="webapp_dialog_title">Aggiungi alla schermata Home</string>
+    <string name="webapp_add_to_desktop">Aggiungi questa app alla tua schermata Home?</string>
+    <string name="webapp_addtodeskpop_append">Aggiunta</string>
+    <string name="webapp_add_to_favorite_toast">Aggiunta nei preferiti</string>
+    <string name="webapp_webapp_favortes_title">Preferiti</string>
+    <string name="dialog_geolocation_reject">Nega</string>
+    <string name="dialog_geolocation_share">Consenti</string>
+    <string name="webapp_menu_addtodesk">Aggiungi alla schermata Home</string>
+    <string name="webapp_menu_already_addtodesk">Aggiunta nella schermata Home</string>
+    <string name="webapp_menu_share">Condividi</string>
+    <string name="webapp_menu_settings">Impostazioni</string>
+    <string name="webapp_menu_nightmode">Modalità Notte</string>
+    <string name="webapp_menu_favorites">Preferiti</string>
+    <string name="webapp_menu_exit">Esci</string>
+    <string name="webapp_settings_title">Impostazioni</string>
+    <string name="pref_webapp_settings_fontsize">Dimensione caratteri</string>
+    <string name="pref_webapp_settings_savewidth">Non usare connessioni dati 2G/3G per scaricare le immagini</string>
+    <string name="pref_webapp_settings_hidebottombar">Nascondi barra inferiore</string>
     <string name="application_name">Browser</string>
-    <string name="choose_upload">Scegli il file per il caricamento</string>
-    <string name="uploads_disabled">I caricamenti di file sono disabilitati.</string>
+    <string name="choose_upload">Scegli il file per da caricare</string>
+    <string name="uploads_disabled">Il caricamento dei file è disabilitato.</string>
     <string name="tab_most_visited">I più visitati</string>
     <string name="tab_snapshots">Pagine salvate</string>
     <string name="added_to_bookmarks">Aggiunto ai segnalibri.</string>
