Browser.apk strings.xml - Finished

--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -568,7 +568,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="pref_content_plugins">Attiva plug-in</string>
     <string name="pref_content_search_engine_summary">Scegli un motore di ricerca</string>
     <string name="pref_set_homepage_to">Imposta come</string>
-    <string name="pref_content_autofit">Adatta autom. pagine</string>
+    <string name="pref_content_autofit">Adattamento automatico pagine</string>
     <string name="pref_content_autofit_summary">Adatta le pagine web allo schermo</string>
     <string name="pref_general_title">Generali</string>
     <string name="pref_general_autofill_title">Compilazione automatica</string>
@@ -636,13 +636,13 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="pref_security_accept_cookies_summary">Consenti ai siti di salvare e leggere i dati dei cookie</string>
     <string name="pref_min_font_size_value">%d pt</string>
     <string name="pref_force_userscalable">Attivazione forzata zoom</string>
-    <string name="pref_force_userscalable_summary">Ignora richiesta sito per ctrl zoom</string>
+    <string name="pref_force_userscalable_summary">Ignora richieste dei siti di controllare lo zoom</string>
     <string name="pref_inverted_category">Rendering schermo invertito</string>
     <string name="pref_inverted">Rendering invertito</string>
     <string name="pref_inverted_contrast">Contrasto</string>
     <string name="pref_default_zoom">Zoom predefinito</string>
     <string name="pref_default_zoom_dialogtitle">Zoom predefinito</string>
-    <string name="pref_content_load_page">Apri pag. in panoramica</string>
+    <string name="pref_content_load_page">Apri pagina in panoramica</string>
     <string name="pref_content_load_page_summary">Visualizza la panoramica delle pagine appena aperte</string>
     <string name="pref_extras_title">Avanzate</string>
     <string name="pref_extras_website_settings_summary">Impostazioni avanzate dei singoli siti web</string>
@@ -652,7 +652,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="pref_development_single_column_rendering">Rendering a singola colonna</string>
     <string name="pref_development_normal_rendering">Rendering normale</string>
     <string name="pref_development_trace">Attiva tracciamento</string>
-    <string name="pref_development_nav_dump">Attiva dump cache nav</string>
+    <string name="pref_development_nav_dump">Attiva dump cache di navigazione</string>
     <string name="pref_development_hardware_accel">Attiva rendering OpenGL</string>
     <string name="pref_development_hardware_accel_skia">Attiva accelerazione HW skia</string>
     <string name="pref_development_visual_indicator">Attiva Indicatore Visuale</string>
@@ -709,10 +709,10 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="website_settings_clear_all_dialog_ok_button">OK</string>
     <string name="website_settings_clear_all_dialog_cancel_button">Annulla</string>
     <string name="progress_dialog_setting_wallpaper">Impostazione sfondo...</string>
-    <string name="error_console_header_text_minimized">Show JavaScript console</string>
-    <string name="error_console_header_text_maximized">JavaScript console</string>
-    <string name="error_console_eval_text_hint">Evaluate JavaScript</string>
-    <string name="error_console_eval_button_text">Evaluate</string>
+    <string name="error_console_header_text_minimized">Mostra console JavaScript</string>
+    <string name="error_console_header_text_maximized">Console JavaScript</string>
+    <string name="error_console_eval_text_hint">Esegui JavaScript</string>
+    <string name="error_console_eval_button_text">Esegui</string>
     <string name="empty_bookmarks_folder">Nessun segnalibro.</string>
     <string name="rlz_access_point">Y1</string>
     <string name="preview">Anteprima</string>
